--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -140,7 +140,7 @@
         <ng-container *transloco="let t">
 
             <div class="text-center sm:text-left">
-                <p class="font-medium">Trotapie © 2025</p>
+                <p class="font-medium">Trotapie © {{ currentYear }}</p>
                 <!-- <span class="text-secondary font-medium cursor-pointer" (click)="abrirAviso()">
                                 Aviso de Privacidad
                             </span> -->
