--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -557,7 +557,7 @@
                                             *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
                                             class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
                                            text-lg font-semibold tracking-wide backdrop-blur-sm transition
-                                           flex items-center justify-between px-5 group" (click)="cargaInfo(item)">
+                                           flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
                                             <span class="group-hover:not-italic">
                                                 {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
                                             </span>
