--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -532,7 +532,9 @@
 
                         <ng-container fuseCardBack>
                             <div class="relative w-full h-full rounded-3xl overflow-hidden shadow-lg
-                               bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-999" [class.pointer-events-none]="heroCard?.face === 'front'">
+                               bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-[999]" 
+                               [ngClass]="{ 'hidden': heroCard?.face === 'front' }"
+                               [class.pointer-events-none]="heroCard?.face === 'front'">
 
                                 <button type="button" mat-icon-button
                                     class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
