--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -549,43 +549,14 @@
   }
 }
 
-fuse-card, .fuse-card, .fuse-card-face {
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-}
-
-/* Si tu lista hace scroll */
-.custom-scrollbar {
-  -webkit-overflow-scrolling: touch;
-  touch-action: pan-y;
-}
-
-/* SOLO deja clickeable la cara activa */
-fuse-card.fuse-card-face-front .fuse-card-back {
-  display: none !important;
-  pointer-events: none !important;
-}
-
-fuse-card.fuse-card-face-back .fuse-card-front {
-  display: none !important;
-  pointer-events: none !important;
-}
-
-/* iOS/Safari: mejora el hit-testing con transforms */
-fuse-card, fuse-card * {
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
 fuse-card {
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
-  will-change: transform;
+    perspective: 1000px;
 }
 
-
-
+[fuseCardFront], [fuseCardBack] {
+    backface-visibility: hidden !important;
+    -webkit-backface-visibility: hidden !important;
+}
 // .always-scrollbar {
 //   position: relative;
 // }
