--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -501,7 +501,9 @@
                             <div class="relative w-full h-full rounded-3xl overflow-hidden shadow-lg
                                flex items-center justify-center text-white bg-cover bg-center"
                                 [ngStyle]="{ 'background-image': currentImage ? 'url(' + currentImage + ')' : 'none' }"
-                                [ngClass]="{ 'pointer-events-none': heroCard?.face === 'back', 'z-20': heroCard?.face === 'front' }">
+                                [style.pointerEvents]="heroCard?.face === 'back' ? 'none' : 'auto'"
+                                [style.zIndex]="heroCard?.face === 'front' ? 20 : 0"
+                                [style.touchAction]="heroCard?.face === 'back' ? 'none' : 'auto'">
 
                                 <div *ngIf="overlayImage"
                                     class="absolute inset-0 bg-cover bg-center transition-opacity duration-500 pointer-events-none"
@@ -533,10 +535,10 @@
                         <ng-container fuseCardBack>
                             <div class="relative w-full h-full rounded-3xl shadow-lg
                                bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white "
-                               [ngClass]="{ 
-                                 'hidden pointer-events-none': heroCard?.face === 'front',
-                                 'z-[1000] pointer-events-auto': heroCard?.face === 'back' 
-     }">
+                               [style.pointerEvents]="heroCard?.face === 'back' ? 'auto' : 'none'"
+                               [style.zIndex]="heroCard?.face === 'back' ? 1000 : 0"
+                               [style.touchAction]="heroCard?.face === 'back' ? 'auto' : 'none'"
+                               [class.hidden]="heroCard?.face === 'front'">
 
                                 <button type="button" mat-icon-button
                                     class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
