--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -494,7 +494,7 @@
             <div class="flex min-w-0 flex-auto flex-col mt-2 items-center justify-center h-full w-full">
                 <div class="flex justify-center items-center p-3 sm:p-5 md:p-8 w-full h-full">
 
-                    <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]"
+                    <!-- <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]"
                         [flippable]="true" #heroCard>
 
                         <ng-container fuseCardFront>
@@ -546,7 +546,86 @@
                                     <mat-icon class="text-white">arrow_back</mat-icon>
                                 </button>
 
-                                <!-- ESTE WRAPPER AHORA OCUPA TODO EL ALTO -->
+                    <div class="w-full h-full flex flex-col text-center min-h-0">
+                        <h2 class="text-3xl font-bold mb-4 tracking-tight">
+                            {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
+                        </h2>
+
+                        <p class="text-md text-gray-300 mb-6">
+                            {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
+                        </p>
+
+                        <div class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
+                            <button *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)" class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
+                                           text-lg font-semibold tracking-wide backdrop-blur-sm transition
+                                           flex items-center justify-between px-5 group z-[9999]"
+                                (click)="cargaInfo(item)">
+                                <span class="group-hover:not-italic">
+                                    {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+    </ng-container>
+
+    </fuse-card> -->
+
+                    <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]"
+                        [flippable]="true" #heroCard>
+
+                        <ng-container fuseCardFront>
+                            <div class="relative w-full h-full rounded-3xl overflow-hidden shadow-lg
+                    flex items-center justify-center text-white bg-cover bg-center"
+                                style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
+                                [ngStyle]="{ 'background-image': currentImage ? 'url(' + currentImage + ')' : 'none' }"
+                                [style.pointerEvents]="heroCard?.face === 'back' ? 'none' : 'auto'"
+                                [style.visibility]="heroCard?.face === 'back' ? 'hidden' : 'visible'"
+                                [style.zIndex]="heroCard?.face === 'front' ? 20 : 0">
+
+                                <div *ngIf="overlayImage"
+                                    class="absolute inset-0 bg-cover bg-center transition-opacity duration-500 pointer-events-none"
+                                    [ngStyle]="{ 'background-image': 'url(' + overlayImage + ')' }"
+                                    [class.opacity-0]="!isTransitioning" [class.opacity-100]="isTransitioning"></div>
+
+                                <div class="absolute inset-0 bg-black/40 z-0 pointer-events-none"></div>
+
+                                <div class="absolute top-10 z-10 flex flex-col items-center text-center px-6 space-y-2">
+                                    <span class="text-3xl font-bold">{{ t('titulo-destinos') }}</span>
+                                </div>
+
+                                <div class="absolute bottom-10 transform flex flex-col gap-4 z-20">
+                                    <button
+                                        class="px-8 py-3 bg-green-700 text-white text-lg font-semibold rounded-full shadow-md hover:bg-green-800 transition"
+                                        (click)="heroCard.face = 'back'; cargarDestinos(1)">
+                                        {{ t('destinos-nacionales') }}
+                                    </button>
+
+                                    <button
+                                        class="px-8 py-3 bg-[#F9B44B] text-white text-lg font-semibold rounded-full shadow-md hover:bg-[#e0a13a] transition"
+                                        (click)="heroCard.face = 'back'; cargarDestinos(2)">
+                                        {{ t('destinos-internacionales') }}
+                                    </button>
+                                </div>
+                            </div>
+                        </ng-container>
+
+                        <ng-container fuseCardBack>
+                            <div class="relative w-full h-full rounded-3xl shadow-lg
+                    bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white"
+                                style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
+                                [style.transform]="heroCard?.face === 'back' ? 'translateZ(1px)' : ''"
+                                [style.pointerEvents]="heroCard?.face === 'back' ? 'auto' : 'none'"
+                                [style.zIndex]="heroCard?.face === 'back' ? 1000 : 0"
+                                [style.touchAction]="heroCard?.face === 'back' ? 'auto' : 'none'"
+                                [class.hidden]="heroCard?.face === 'front'">
+
+                                <button type="button" mat-icon-button
+                                    class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
+                                    (click)="heroCard.face = 'front'" (touchstart)="heroCard.face = 'front'">
+                                    <mat-icon class="text-white">arrow_back</mat-icon>
+                                </button>
+
                                 <div class="w-full h-full flex flex-col text-center min-h-0">
                                     <h2 class="text-3xl font-bold mb-4 tracking-tight">
                                         {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
@@ -556,15 +635,13 @@
                                         {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
                                     </p>
 
-                                    <!-- LA LISTA AHORA CRECE Y USA TODO EL ESPACIO -->
                                     <div
                                         class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
                                         <button
                                             *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
                                             class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
-                                           text-lg font-semibold tracking-wide backdrop-blur-sm transition
-                                           flex items-center justify-between px-5 group z-[9999]"
-                                            (click)="cargaInfo(item)">
+                               text-lg font-semibold tracking-wide backdrop-blur-sm transition
+                               flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
                                             <span class="group-hover:not-italic">
                                                 {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
                                             </span>
