--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -612,7 +612,7 @@
 
                         <ng-container fuseCardBack>
                             <div class="relative w-full h-full rounded-3xl shadow-lg
-                    bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white"
+                    bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-[1000]"
                                 style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
                                 [style.transform]="heroCard?.face === 'back' ? 'translateZ(1px)' : ''"
                                 [style.pointerEvents]="heroCard?.face === 'back' ? 'auto' : 'none'"
@@ -636,7 +636,7 @@
                                     </p>
 
                                     <div
-                                        class="flex flex-col gap-4 flex-1 min-h-0  px-1 custom-scrollbar">
+                                        class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
                                         <button
                                             *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
                                             class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
