--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -611,47 +611,44 @@
                         </ng-container>
 
                         <ng-container fuseCardBack>
-                            <div class="relative w-full h-full rounded-3xl shadow-lg
-                    bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-[1000]"
-                                style="backface-visibility: hidden; -webkit-backface-visibility: hidden;"
-                                [style.transform]="heroCard?.face === 'back' ? 'translateZ(1px)' : ''"
-                                [style.pointerEvents]="heroCard?.face === 'back' ? 'auto' : 'none'"
-                                [style.zIndex]="heroCard?.face === 'back' ? 1000 : 0"
-                                [style.touchAction]="heroCard?.face === 'back' ? 'auto' : 'none'"
-                                [class.hidden]="heroCard?.face === 'front'">
+                        </ng-container>
+                        
+                    </fuse-card>
+                    <section class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]">
 
-                                <button type="button" mat-icon-button
-                                    class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
-                                    (click)="heroCard.face = 'front'" (touchstart)="heroCard.face = 'front'">
-                                    <mat-icon class="text-white">arrow_back</mat-icon>
-                                </button>
-
-                                <div class="w-full h-full flex flex-col text-center min-h-0">
-                                    <h2 class="text-3xl font-bold mb-4 tracking-tight">
-                                        {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
-                                    </h2>
-
-                                    <p class="text-md text-gray-300 mb-6">
-                                        {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
-                                    </p>
-
-                                    <div
-                                        class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
-                                        <button
-                                            *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
-                                            class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
-                               text-lg font-semibold tracking-wide backdrop-blur-sm transition
-                               flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
-                                            <span class="group-hover:not-italic">
-                                                {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
-                                            </span>
-                                        </button>
-                                    </div>
+                        <div  class="relative w-full h-full rounded-3xl shadow-lg
+                bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white z-[1000]">
+    
+                            <button type="button" mat-icon-button
+                                class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
+                                (click)="heroCard.face = 'front'" (touchstart)="heroCard.face = 'front'">
+                                <mat-icon class="text-white">arrow_back</mat-icon>
+                            </button>
+    
+                            <div class="w-full h-full flex flex-col text-center min-h-0">
+                                <h2 class="text-3xl font-bold mb-4 tracking-tight">
+                                    {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
+                                </h2>
+    
+                                <p class="text-md text-gray-300 mb-6">
+                                    {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
+                                </p>
+    
+                                <div
+                                    class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
+                                    <button
+                                        *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
+                                        class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
+                           text-lg font-semibold tracking-wide backdrop-blur-sm transition
+                           flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
+                                        <span class="group-hover:not-italic">
+                                            {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
+                                        </span>
+                                    </button>
                                 </div>
                             </div>
-                        </ng-container>
-
-                    </fuse-card>
+                        </div>
+                    </section>
 
                 </div>
             </div>
