--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -542,9 +542,7 @@
                     </fuse-card>
                     @if(overlayAnimatedOnce){
 
-                        <div class="absolute top-0 left-1/2 -translate-x-1/2
-             max-w-xl w-full md:w-[600px]
-             h-[70vh] sm:h-[80vh] md:h-[70vh]" [ngClass]="[
+                        <div class="absolute max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]" [ngClass]="[
         heroCard?.face === 'back'
           ? 'opacity-100 z-[50] pointer-events-auto'
           : 'opacity-0 z-[-1] pointer-events-none',
