--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -398,11 +398,21 @@
                         </div>
                     </div>
 
+                    <div class="relative h-[4px] overflow-hidden bg-gray-200/60 my-6">
+                        <span class="absolute inset-0 shimmer"></span>
+                    </div>
+
+                    <!-- <div
+                        class="h-[2px] my-6 bg-gradient-to-r from-gray-200 via-[#F9B44B]/50 to-gray-200 animate-gradient">
+                    </div> -->
+
+
                     <div class="absolute left-0 right-0 bottom-4 px-6 space-y-2">
                         <article class="text-center ">
                             <strong> {{t('operadores-verificados')}}</strong>
                         </article>
-                        <button mat-flat-button color="primary" class="w-full text-white animate-pulse-slow shadow-lg bg-[#F9B44B]  hover:bg-[#e0a13a]"
+                        <button mat-flat-button color="primary"
+                            class="w-full text-white animate-pulse-slow shadow-lg bg-[#F9B44B]  hover:bg-[#e0a13a]"
                             (click)="abrirForm()">
                             <div class="flex items-center justify-center ">
                                 <img class="w-6 h-6 mr-3" src="assets/icons/concerge.svg" />
