--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -524,9 +524,9 @@
                                         {{ t('destinos-nacionales') }}
                                     </button>
 
-                                    <button
-                                        class="px-8 py-3 bg-[#F9B44B] text-white text-lg font-semibold rounded-full shadow-md hover:bg-[#e0a13a] transition"
-                                        (click)=" showOverlay(); cargarDestinos(2)">
+                                    <button class="px-8 py-3 bg-[#F9B44B] text-white text-lg font-semibold rounded-full shadow-md
+         hover:bg-[#e0a13a] transition
+         [text-shadow:_0_2px_2px_rgba(0,0,0,0.50)]" (click)="showOverlay(); cargarDestinos(2)">
                                         {{ t('destinos-internacionales') }}
                                     </button>
                                 </div>
@@ -542,7 +542,7 @@
                     </fuse-card>
                     @if(overlayAnimatedOnce){
 
-                        <div class="absolute max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh] px-1" [ngClass]="[
+                    <div class="absolute max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh] px-1" [ngClass]="[
         heroCard?.face === 'back'
           ? 'opacity-100 z-[50] pointer-events-auto'
           : 'opacity-0 z-[-1] pointer-events-none',
@@ -551,38 +551,38 @@
           ? 'transition-opacity duration-1000'
           : ''
       ]">
-    
-                            <div class="relative w-full h-full rounded-3xl shadow-lg
+
+                        <div class="relative w-full h-full rounded-3xl shadow-lg
                   bg-[#0B0B2B] flex flex-col px-8 pt-10 pb-6 text-white">
-    
-                                <button type="button" mat-icon-button
-                                    class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
-                                    (click)="hideOverlay();" >
-                                    <mat-icon class="text-white">arrow_back</mat-icon>
-                                </button>
-    
-                                <div class="w-full h-full flex flex-col text-center min-h-0">
-                                    <h2 class="text-3xl font-bold mb-4 tracking-tight">
-                                        {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
-                                    </h2>
-    
-                                    <p class="text-md text-gray-300 mb-6">
-                                        {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
-                                    </p>
-    
-                                    <div class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
-                                        <button *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
-                                            class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
+
+                            <button type="button" mat-icon-button
+                                class="absolute top-4 right-4 z-[9999] bg-white/10 hover:bg-white/20 rounded-full transition"
+                                (click)="hideOverlay();">
+                                <mat-icon class="text-white">arrow_back</mat-icon>
+                            </button>
+
+                            <div class="w-full h-full flex flex-col text-center min-h-0">
+                                <h2 class="text-3xl font-bold mb-4 tracking-tight">
+                                    {{ tipoDestino === 1 ? t('selecciona-destino') : t('explora-continente') }}
+                                </h2>
+
+                                <p class="text-md text-gray-300 mb-6">
+                                    {{ tipoDestino === 1 ? t('texto-nacionales') : t('texto-internacionales') }}
+                                </p>
+
+                                <div class="flex flex-col gap-4 flex-1 min-h-0 overflow-y-auto px-1 custom-scrollbar">
+                                    <button *ngFor="let item of (tipoDestino === 1 ? destinos : this.agrupadosDestinos)"
+                                        class="w-full py-3 bg-white/10 hover:bg-white/20 rounded-xl shadow-md
                                text-lg font-semibold tracking-wide backdrop-blur-sm transition
                                flex items-center justify-between px-5 group z-[9999]" (click)="cargaInfo(item)">
-                                            <span class="group-hover:not-italic">
-                                                {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
-                                            </span>
-                                        </button>
-                                    </div>
+                                        <span class="group-hover:not-italic">
+                                            {{ tipoDestino === 1 ? item.nombre : item.nombrePadre }}
+                                        </span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
+                    </div>
                     }
 
                 </div>
