Forma de botones

--- a/src/@fuse/services/confirmation/dialog/dialog.component.html
+++ b/src/@fuse/services/confirmation/dialog/dialog.component.html
@@ -83,7 +83,7 @@
             <!-- Confirm -->
             @if (data.actions.confirm.show) {
                 <button
-                    mat-flat-button
+                    mat-raised-button
                     [color]="data.actions.confirm.color"
                     [matDialogClose]="'confirmed'"
                 >
