--- a/src/app/layout/common/shortcuts/shortcuts.component.html
+++ b/src/app/layout/common/shortcuts/shortcuts.component.html
@@ -243,7 +243,7 @@
                         @if (mode === 'edit') {
                             <button
                                 class="mr-2"
-                                mat-flat-button
+                                mat-raised-button
                                 type="button"
                                 (click)="delete()"
                             >
@@ -251,7 +251,7 @@
                             </button>
                         }
                         <button
-                            mat-flat-button
+                            mat-raised-button
                             [color]="'primary'"
                             [disabled]="!shortcutForm.valid"
                             type="button"
