--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -27,7 +27,7 @@
                     <languages></languages>
                 </div>
     <ng-container *transloco="let t">
-        <button mat-flat-button class=" ml-auto mr-2 flex items-center justify-end gap-2"
+        <button mat-stroked-button class=" ml-auto mr-2 flex items-center justify-end gap-2"
             (click)="regresarInicio()">
             <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:home'"></mat-icon>{{ t('inicio') }}
         </button>
