--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -56,7 +56,7 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large mt-3 w-full"
-                    mat-flat-button
+                    mat-raised-button
                     [color]="'primary'"
                     [disabled]="forgotPasswordForm.disabled"
                     (click)="sendResetLink()"
