--- a/src/app/modules/auth/reset-password/reset-password.component.html
+++ b/src/app/modules/auth/reset-password/reset-password.component.html
@@ -129,7 +129,7 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large mt-3 w-full"
-                    mat-flat-button
+                    mat-raised-button
                     [color]="'primary'"
                     [disabled]="resetPasswordForm.disabled"
                     (click)="resetPassword()"
