--- a/src/app/modules/auth/sign-up/sign-up.component.html
+++ b/src/app/modules/auth/sign-up/sign-up.component.html
@@ -134,7 +134,7 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large mt-6 w-full"
-                    mat-flat-button
+                    mat-raised-button
                     [color]="'primary'"
                     [disabled]="signUpForm.disabled"
                     (click)="signUp()"
