--- a/src/app/modules/landing/home/home.component.html
+++ b/src/app/modules/landing/home/home.component.html
@@ -21,7 +21,7 @@
         <div>
             <a
                 class="mt-8"
-                mat-flat-button
+                mat-raised-button
                 [color]="'primary'"
                 [routerLink]="'/dashboards/project'"
             >
