--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -77,76 +77,6 @@
                                                     </ng-container>
 
                                                 </mat-autocomplete>
-
-                                                <!-- <div class="w-full px-5 py-2.5 rounded-full border-2
-         text-sm md:text-base font-semibold text-left
-         cursor-pointer transition duration-200 flex items-center" [ngClass]="{
-    'border-[#F9B44B] text-[#F9B44B]': tipoDestino === 2
-  }">
-                                                <mat-select #selectDestino class="pill-mat-select w-full"
-                                                    [panelClass]="'panel-internacionales'" disableRipple
-                                                    (selectionChange)="onDestinoChange($event)">
-                                                    <mat-select-trigger>
-                                                        {{ selectedDestinoLabel || 'Selecciona un destino' }}
-                                                    </mat-select-trigger>
-
-                                                    <ng-container *ngIf="modoDestino === 'padres'; else modoHijos">
-                                                        <mat-option [value]="null" disabled>Selecciona un
-                                                            continente</mat-option>
-                                                        <mat-option *ngFor="let grupo of agrupadosDestinos"
-                                                            [value]="grupo.nombrePadre" class="font-semibold">
-                                                            {{ grupo.nombrePadre }}
-                                                        </mat-option>
-                                                    </ng-container>
-
-                                                    <ng-template #modoHijos>
-                                                        <mat-option [value]="null" (click)="volverAPadres()">
-                                                            ← Cambiar de continente
-                                                        </mat-option>
-                                                        <mat-option *ngFor="let destino of grupoSeleccionado?.destinos"
-                                                            [value]="destino.id">
-                                                            {{ destino.nombre }}
-                                                        </mat-option>
-                                                    </ng-template>
-                                                </mat-select>
-                                            </div> -->
-
-
-                                                <!-- <div *ngIf="tipoDestino === 2" class="w-full px-5 py-2.5 rounded-full border-2
-                                                text-sm md:text-base font-semibold text-left
-                                                     cursor-pointer transition duration-200 flex items-center"
-                                                [ngClass]="{
-                                                'border-[#F9B44B] text-[#F9B44B]': tipoDestino === 2
-                                              }" [matMenuTriggerFor]="menuDestinos">
-                                                <span class="flex-1 truncate">
-                                                    {{ selectedDestinoLabel || 'Selecciona un destino' }}
-                                                </span>
-                                                <mat-icon class="ml-2 text-inherit">expand_more</mat-icon>
-                                            </div>
-
-                                            <mat-menu #menuDestinos="matMenu" class="min-w-[260px]">
-                                                <ng-container *ngFor="let grupo of agrupadosDestinos">
-                                                    <button mat-menu-item *ngIf="grupo.destinos?.length; else soloGrupo"
-                                                        [matMenuTriggerFor]="menuGrupo">
-                                                        <span>{{ grupo.nombrePadre }}</span>
-                                                        <span class="flex-1"></span>
-                                                        <mat-icon>chevron_right</mat-icon>
-                                                    </button>
-
-                                                    <mat-menu #menuGrupo="matMenu">
-                                                        <button mat-menu-item *ngFor="let destino of grupo.destinos"
-                                                            (click)="selectDestino(destino)">
-                                                            {{ destino.nombre }}
-                                                        </button>
-                                                    </mat-menu>
-
-                                                    <ng-template #soloGrupo>
-                                                        <button mat-menu-item (click)="selectDestino(grupo)">
-                                                            {{ grupo.nombrePadre }}
-                                                        </button>
-                                                    </ng-template>
-                                                </ng-container>
-                                            </mat-menu> -->
                                             </div>
                                         </div>
                                     </div>
@@ -155,7 +85,7 @@
                                 </div>
 
                                 <div class="flex justify-center ">
-                                    <button *ngIf="tipoDestino === 1" mat-flat-button type="button" color="accent"
+                                    <button *ngIf="tipoDestino === 1" mat-stroked-button type="button" color="accent"
                                         class="flex items-center gap-2 bg-black text-white px-4 py-2 rounded-full hover:bg-gray-700 transition duration-200"
                                         (click)="irA()">
                                         <div class="flex items-center">
@@ -164,7 +94,7 @@
 
                                         </div>
                                     </button>
-                                    <button *ngIf="tipoDestino === 2" mat-flat-button type="button" color="accent"
+                                    <button *ngIf="tipoDestino === 2" mat-raised-button type="button" color="accent"
                                         class="mr-2" (click)="irANacionales()">
                                         <div class="flex items-center">
                                             <img class="w-6 h-6 mr-2" src="assets/icons/destinos-nacionales.svg" />
