--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -122,7 +122,7 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large mt-6 w-full"
-                    mat-flat-button
+                    mat-raised-button
                     [color]="'primary'"
                     [disabled]="signInForm.disabled"
                     (click)="signIn()"
