--- a/src/app/modules/auth/unlock-session/unlock-session.component.html
+++ b/src/app/modules/auth/unlock-session/unlock-session.component.html
@@ -84,7 +84,7 @@
                 <!-- Submit button -->
                 <button
                     class="fuse-mat-button-large mt-3 w-full"
-                    mat-flat-button
+                    mat-raised-button
                     [color]="'primary'"
                     [disabled]="unlockSessionForm.disabled"
                     (click)="unlock()"
